# inspect-hello

./: README.md  gsm8k.py  hellaswag.py  main.py  math.py  pyproject.toml  security.py  tasks.py  tools.py
intercode/: dataset.py  task.py
logs/: 2025-12-02T17-00-46+00-00_theory-of-mind_ftyNQe5kyc47nfxFc5E6Qx.eval  2025-12-02T17-21-06+00-00_theory-of-mind_hukWUGDnqeRuaNDNtHUaFe.eval  2025-12-02T17-36-02+00-00_hello-world_Ma6pdhH6tg2YtJoKK4qkRL.eval  2025-12-02T18-06-33+00-00_security-guide_ZHFg96TJVx2z5Sq4gdq52A.eval  2025-12-02T18-34-31+00-00_hellaswag_QoXCA6CsoyTHfUtCWUdkoX.eval  2025-12-02T19-02-44+00-00_gsm8k_CBDdUtpdZ3zsSDmVS6PYjv.eval  2025-12-04T18-33-08+00-00_addition_ZJRMaWJbnucwREfs5yVGBH.eval  2025-12-04T18-33-28+00-00_addition_42Tvp6h4XEum8zRixbksDZ.eval  2025-12-04T19-18-43+00-00_intercode-ctf_EuRhM9gNFYsbEKtxDh66Fy.eval
